k8s/django/django2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django2
spec:
  replicas: 1
  selector:
    matchLabels:
      component: django2
  template:
    metadata:
      labels:
        component: django2
    spec:
      containers:
        - name: django2
          image: it21998/mydjangoapp2
          ports:
            - containerPort: 9000
          imagePullPolicy: Always
