k8s/django/django2-clip.yaml
apiVersion: v1
kind: Service
metadata:
  name: django2-clip
spec:
  type: ClusterIP
  selector:
    component: django2
  ports:
    - port: 9000
      targetPort: 9000
